# brip

./: README.md  setup.cfg
.github/workflows/: python-package.yml
brip/: __init__.py  brip.py
