[metadata]
# Derived from https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
name = brip
version = attr: brip.__version__
description = brip stands for Brython's pip. It brings the Python Package Index (PyPI) ecosystem and the pip-like workflow to Brython-powered project.
author = Ray Luo
author_email = rayluo.mba@gmail.com
url = https://github.com/rayluo/brip
project_urls =
    Changelog = https://github.com/rayluo/brip/releases
keywords = pip, brython, package, install
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Build Tools
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

# NOTE: Settings of this section below this line should not need to be changed

long_description = file: README.md

[options]
install_requires =
    # See also https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html#dependency-management
    brython>=3.7.5,<4  # The BFS format was first introduced in brython 3.7.5
    pip>=21.1  # Per my test, the in-tree-build feature is available in pip 21.1+

# NOTE: Settings of this section below this line should not need to be changed
packages = find:
include_package_data = True

[options.extras_require]
# Examples:
# secure = crytography
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.entry_points]
# See also https://setuptools.readthedocs.io/en/latest/userguide/entry_point.html
console_scripts =
    brip = brip.brip:main
    # executable_name = [package.subpackage.]module[:object.object]
gui_scripts =

[options.packages.find]
# Derived from https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html
exclude = tests

[options.package_data]
* = LICENSE,

[bdist_wheel]
universal=1

