[metadata]
# Derived from https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
name = brip
version = attr: brip.__version__
description = brip stands for Brython's pip. It brings the Python Package Index (PyPI) ecosystem and the pip-like workflow to Brython-powered project.
author = Ray Luo
author_email = rayluo.mba@gmail.com
url = https://github.com/rayluo/brip
project_urls =
    Changelog = https://github.com/rayluo/brip/releases
keywords = pip, brython, package, install
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Build Tools
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

# NOTE: Settings of this section below this line should not need to be changed

long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
install_requires =
    # See also https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html#dependency-management

    brython>=3.7.5,<=3.10.5; python_version>='3.7' and python_version<='3.9'  # The BFS format was first introduced in brython 3.7.5
    brython>=3.10.6; python_version>='3.10'  # Brython 3.10.6+ uses the "match" syntax that requires Python 3.10+

    pip>=1.1  # We need "-t" introduced in pip 1.1 https://github.com/pypa/pip/commit/176d3a266313d69c6303381907cb864464cf4b3a

# NOTE: Settings of this section below this line should not need to be changed
packages = find:
include_package_data = True

[options.extras_require]
# Examples:
# secure = crytography
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.entry_points]
# See also https://setuptools.readthedocs.io/en/latest/userguide/entry_point.html
console_scripts =
    brip = brip.brip:main
    # executable_name = [package.subpackage.]module[:object.object]
gui_scripts =

[options.packages.find]
# Derived from https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html
exclude = tests

[options.package_data]
* = LICENSE,

[bdist_wheel]
universal=1

